# zais-mcleaner

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build-apps.yml  deploy-web.yml
public/: manifest.webmanifest
src/: App.tsx  appTypes.ts  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Dropzone.tsx  FileItem.tsx  MetaChips.tsx  ProgressBar.tsx  Toggles.tsx  icons.tsx
src/core/: cleanImage.ts  cleanVideo.ts  detect.ts  gif.ts  index.ts  jpeg.ts  png.ts  strip.test.ts  types.ts  webp.ts
src/i18n/: en.json  index.ts  pt.json
src/platform/: save.ts
