[package]
name = "zais-mcleaner"
version = "0.1.0"
description = "Zai's MCleaner — limpador de metadados de imagens e vídeos"
authors = ["zaipublic"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "mcleaner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
